# subsocia-sync-ldap

./: .gitignore  CHANGES.md  README.md  config.ml  jbuild  netldapx_filter.ml  subsocia-sync-ldap.descr  subsocia-sync-ldap.opam  sync.ml
lib/: config.ml  config.mli  csn_state.ml  csn_state.mli  dict.ml  dict.mli  dns_srv.ml  dns_srv.mli  dune  logging.ml  logging.mli  netldapx.ml  netldapx.mli  prereq.ml  prereq.mli  scope.ml  scope.mli  sync.ml  sync.mli  target.ml  target.mli  template.ml  template.mli  template_env.ml  template_env.mli  variable.ml  variable.mli
pkg/: pkg.ml
src/: config.ml  config.mli  dune  jbuild  logging.mli  main.ml  netldapx.ml  netldapx.mli  netldapx_filter.ml  netldapx_filter.mli  sync.ml  sync.mli  template.ml  template.mli  variable.ml
