opam-version: "1.2"
author: "Petter A. Urkedal <paurkedal@gmail.com>"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
homepage: "https://github.com/paurkedal/subsocia-sync-ldap"
bug-reports: "mailto:nimbus-support@nbi.ku.dk"
dev-repo: "https://github.com/paurkedal/subsocia-sync-ldap.git"
license: "GPL-3"

build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]

depends: [
  "angstrom"
  "cmdliner"
  "conf-gssapi"
  "jbuilder" {build}
  "logs"
  "lwt"
  "lwt_ppx"
  "ocaml-inifiles"
  "ocamldap"
  "ocamlnet"
  "ppx_compose"
  "ppx_regexp"
  "re"
  "subsocia"
]
