opam-version: "2.0"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "GPL-3"
homepage: "https://github.com/paurkedal/subsocia-sync-ldap"
bug-reports: "mailto:nimbus-support@nbi.ku.dk"
depends: [
  "ocaml"
  "angstrom"
  "calendar"
  "cmdliner"
  "conf-gssapi"
  "jbuilder" {build}
  "ldap"
  "logs"
  "lwt"
  "lwt_ppx"
  "ocaml-inifiles"
  "ocamlnet"
  "ppx_compose"
  "ppx_regexp"
  "re"
  "subsocia"
]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/paurkedal/subsocia-sync-ldap.git"
