opam-version: "2.0"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "GPL-3"
homepage: "https://github.com/paurkedal/subsocia-sync-ldap"
bug-reports: "mailto:nimbus-support@nbi.ku.dk"
depends: [
  "ocaml"
  "angstrom"
  "cmdliner"
  "conf-gssapi"
  "dune" {build}
  "fmt"
  "ldap"
  "logs"
  "lwt"
  "lwt_ppx"
  "ocaml-inifiles"
  "ocamlnet"
  "ppx_compose"
  "ppx_regexp"
  "re"
  "subsocia" {>= "0.18~"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/paurkedal/subsocia-sync-ldap.git"
synopsis: "LDAP to Subsocia Synchronization"
description: """
This package provides a command to synchronize entries from LDAP to Subsocia
according to configuration file describing the mapping of entries,
inclusions, and attributions.
"""
