(library
  (name subsocia_sync_ldap)
  (preprocess (pps ppx_compose lwt_ppx ppx_regexp))
  (libraries
    angstrom
    fmt
    inifiles
    ldap
    logs logs.lwt
    lwt lwt.unix
    netstring netclient netgss-system
    ppx_compose.runtime
    ptime ptime.clock.os
    re.pcre
    subsocia subsocia.data))
