(library
  (name subsocia_sync_ldap)
  (modules Config Logging Netldapx Sync Template Variable)
  (preprocess (pps ppx_compose lwt_ppx ppx_regexp))
  (libraries
    angstrom
    calendar
    inifiles
    ldap
    logs logs.lwt
    lwt lwt.unix
    netclient netgss-system
    ppx_compose.runtime
    ptime ptime.clock.os
    re.pcre
    subsocia subsocia.data))

(executable
  (name main)
  (public_name subsocia-sync-ldap)
  (modules Main)
  (preprocess (pps lwt_ppx))
  (libraries cmdliner caqti-dynload subsocia_sync_ldap))
